@@ -1,5 +1,10 @@
 2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
+	* soap-client.el (soap-encode-basic-type): added more error
+ 	checking for the input value type
+
+2010-10-26  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
 	* soap-client.el (soap-default-xsd-types)
 	(soap-default-soapenc-types): add float basic type
 	(soap-decode-array): bugfix decode the actual child nodes of the
